# HookSample

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt
src/Benchmark/: CMakeLists.txt  benchmark.cpp  pch.h
src/DetoursHook/: CMakeLists.txt  DetoursHook.cpp  DetoursProcessor.cpp  DetoursProcessor.h  DetoursTransaction.h  pch.h
src/DetoursInject/: CMakeLists.txt  DetoursInject.cpp  DetoursInject.h  pch.h
src/DeviareHook/: CMakeLists.txt  DeviareHook.cpp  DeviareProcessor.cpp  DeviareProcessor.h  pch.h
src/HelloWorld/: CMakeLists.txt
src/MHookHook/: CMakeLists.txt  MHookHook.cpp  MHookProcessor.cpp  MHookProcessor.h  pch.h
src/SetupDetoursHook/: CMakeLists.txt  SetupDetoursHook.cpp  pch.h
src/SetupHook/: CMakeLists.txt  SetupHook.cpp  pch.h
src/include/: CMakeLists.txt  HookEngineLoader.h  HookProcessor.h
